name:                tagged-timers
version:             0.1.0.0
synopsis:            Simple wrappers for timing IO actions (single-threaded)
homepage:            http://github.com/ucsd-progsys/tagged-timers
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.8 && <4.9
                    ,  unordered-containers
                    ,  transformers
                    ,  time
  hs-source-dirs:      src
  default-language:    Haskell2010
